--- a/.github/workflows/mlflow_ci.yml
+++ b/.github/workflows/mlflow_ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: 🔁 Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 🐍 Set up Python 3.12.7
         uses: actions/setup-python@v4
@@ -43,7 +43,7 @@ jobs:
           mlflow run . --no-conda
 
       - name: 📤 Upload Artifacts to GitHub
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: mlflow-artifacts
           path: |
@@ -54,7 +54,8 @@ jobs:
       - name: 🐳 Build Docker Image
         run: |
           cd MLProject
-          mlflow models build-docker -m runs:/$(mlflow experiments list | awk 'NR==2{print $1}')/model -n heart-model-image
+          export RUN_ID=$(mlflow runs list --experiment-id 0 | awk 'NR==2{print $1}')
+          mlflow models build-docker -m runs:/${RUN_ID}/model -n heart-model-image
 
       - name: 🔐 Login to Docker Hub
         env:
