--- a/.github/workflows/mlflow_ci.yml
+++ b/.github/workflows/mlflow_ci.yml
@@ -19,13 +19,6 @@ jobs:
         with:
           python-version: '3.12.7'
 
-      - name: 🧪 Print Environment (Check Env)
-        run: |
-          echo "Python version:"
-          python --version
-          echo "Installed packages:"
-          pip list
-
       - name: 📦 Install Conda Environment
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -40,7 +33,7 @@ jobs:
       - name: 🚀 Run MLflow Project
         run: |
           cd MLProject
-          mlflow run . --no-conda
+          mlflow run .
 
       - name: 📤 Upload Artifacts to GitHub
         uses: actions/upload-artifact@v4
