feat: add model training with mlflow + dagshub tracking

--- a/.github/workflows/mlflow_ci.yml
+++ b/.github/workflows/mlflow_ci.yml
@@ -15,6 +15,7 @@ jobs:
       MLFLOW_TRACKING_USERNAME: ${{ secrets.MLFLOW_TRACKING_USERNAME }}
       MLFLOW_TRACKING_PASSWORD: ${{ secrets.MLFLOW_TRACKING_PASSWORD }}
       DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
+      MLFLOW_TRACKING_URI: https://dagshub.com/RiyZ411/msml-studi-kasus-heart.mlflow
 
     steps:
       - name: 🔁 Checkout Repository
@@ -43,6 +44,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda activate heart-prediction-env
+          export MLFLOW_TRACKING_URI=${{ env.MLFLOW_TRACKING_URI }}
           cd MLProject
           python modelling.py \
             --x_train_path heart_preprocessing/X_train.csv \
@@ -63,6 +65,10 @@ jobs:
       - name: 💾 Baca RUN_ID dari file
         id: read_run_id
         run: |
+          if [ ! -f MLProject/run_id.txt ]; then
+            echo "run_id.txt tidak ditemukan!"
+            exit 1
+          fi
           RUN_ID=$(cat MLProject/run_id.txt)
           echo "RUN_ID=$RUN_ID" >> $GITHUB_OUTPUT
 
@@ -70,6 +76,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda activate heart-prediction-env
+          export MLFLOW_TRACKING_URI=${{ env.MLFLOW_TRACKING_URI }}
           cd MLProject
           mlflow models build-docker -m runs:/${{ steps.read_run_id.outputs.RUN_ID }}/model -n heart-model-image
 
