--- a/.github/workflows/mlflow_ci.yml
+++ b/.github/workflows/mlflow_ci.yml
@@ -18,29 +18,32 @@ jobs:
       MLFLOW_TRACKING_URI: https://dagshub.com/RiyZ411/msml-studi-kasus-heart.mlflow
 
     steps:
-      - name: 🔁 Checkout Repository
+      - name: Run actions/checkout@v4
         uses: actions/checkout@v4
 
-      - name: 🐍 Set up Python 3.12.7
+      - name: Set up Python 3.12.7
         uses: actions/setup-python@v4
         with:
           python-version: '3.12.7'
 
-      - name: 📦 Install Conda Environment
+      - name: Check Env
+        run: echo "Tracking URI: $MLFLOW_TRACKING_URI"
+
+      - name: Install dependencies
         uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: heart-prediction-env
           environment-file: MLProject/conda.yaml
           auto-activate-base: false
 
-      - name: ⚙️ Activate Conda & Install Dependencies
+      - name: Install Python dependencies
         shell: bash -l {0}
         run: |
           conda activate heart-prediction-env
           pip install "mlflow[extras]==2.19.0"
           pip install dagshub==0.5.10
 
-      - name: 🚀 Run modelling.py
+      - name: Run mlflow project
         shell: bash -l {0}
         run: |
           conda activate heart-prediction-env
@@ -51,7 +54,14 @@ jobs:
             --y_train_path heart_preprocessing/y_train.csv \
             --y_test_path heart_preprocessing/y_test.csv
 
-      - name: 📤 Upload Artifacts to GitHub
+      - name: Get latest MLflow run id
+        id: read_run_id
+        run: |
+          RUN_ID=$(cat MLProject/run_id.txt)
+          echo "run_id=$RUN_ID"
+          echo "RUN_ID=$RUN_ID" >> $GITHUB_OUTPUT
+
+      - name: Upload to Github
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-artifacts
@@ -61,28 +71,21 @@ jobs:
             MLProject/classification_report.txt
             MLProject/run_id.txt
 
-      - name: 💾 Baca RUN_ID dari file
-        id: read_run_id
-        run: |
-          RUN_ID=$(cat MLProject/run_id.txt)
-          echo "run_id=$RUN_ID"
-          echo "RUN_ID=$RUN_ID" >> $GITHUB_OUTPUT
-
-      - name: 🐳 Build Docker Image
+      - name: Build Docker Model
         shell: bash -l {0}
         run: |
           conda activate heart-prediction-env
           cd MLProject
           mlflow models build-docker -m runs:/${{ steps.read_run_id.outputs.RUN_ID }}/model -n heart-model-image
 
-      - name: 🔐 Login to Docker Hub
+      - name: Log in to Docker Hub
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
 
-      - name: 🏷️ Tag Docker Image
+      - name: Tag Docker Image
         run: docker tag heart-model-image ${{ secrets.DOCKER_USERNAME }}/heart-model-image:latest
 
-      - name: 🚚 Push Docker Image to Docker Hub
+      - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/heart-model-image:latest
