--- a/.github/workflows/mlflow_ci.yml
+++ b/.github/workflows/mlflow_ci.yml
@@ -50,11 +50,11 @@ jobs:
         run: |
           conda activate heart-prediction-env
           cd MLProject
-          python modelling.py \
-            --x_train_path heart_preprocessing/X_train.csv \
-            --x_test_path heart_preprocessing/X_test.csv \
-            --y_train_path heart_preprocessing/y_train.csv \
-            --y_test_path heart_preprocessing/y_test.csv
+          mlflow run . \
+            -P x_train_path=../heart_preprocessing/X_train.csv \
+            -P x_test_path=../heart_preprocessing/X_test.csv \
+            -P y_train_path=../heart_preprocessing/y_train.csv \
+            -P y_test_path=../heart_preprocessing/y_test.csv
 
       - name: Get latest MLflow run id
         id: read_run_id
